...
                                            <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                            <mask key="constraints">
                                                <include reference="iR8-N7-dse"/>
                                            </mask>
                                        </variation>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.79" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Q8-F1-zQv">
                                        <rect key="frame" x="20" y="60" width="143" height="20.333333333333314"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="143" id="TBy-gF-azD"/>
                                            <constraint firstAttribute="width" constant="250" id="hM2-KH-PzF"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="0.0" y="92" width="414" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RJT-4e-Cdv" id="aVn-tc-YiJ">
                                    <rect key="frame" x="0.0" y="0.0" width="381" height="43.666666666666664"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hiking trip fees" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clV-OD-v5R">
                                            <rect key="frame" x="19" y="11" width="272" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <color key="textColor" red="0.1176470588" green="0.63137254899999995" blue="0.84705882349999995" alpha="0.77910431338028174" colorSpace="custom" customColorSpace="sRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="200" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1,211" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VzM-zm-4IP">
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="D78-mW-Zhw" id="JSo-91-fZV"/>
                            <outlet property="delegate" destination="D78-mW-Zhw" id="H7X-mb-CPd"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Transactions" id="KG6-cV-bR4">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ytv-Ro-9wY">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <segue destination="3iB-HS-PDJ" kind="popoverPresentation" popoverAnchorBarButtonItem="Ytv-Ro-9wY" id="REh-Gb-r2Z">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
...
                                                    <color key="textColor" red="0.1176470588" green="0.63137254899999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                    <variation key="heightClass=regular-widthClass=regular">
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    </variation>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="200" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ivo-N7-7pj">
                                                    <rect key="frame" x="289" y="11" width="79" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="79" id="kRs-yA-igJ"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <color key="textColor" red="0.1176470588" green="0.63137254899999995" blue="0.84705882349999995" alpha="0.77910431339999997" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <outlet property="dataSource" destination="wiR-SA-twt" id="VHH-Gi-2kE"/>
                            <outlet property="delegate" destination="wiR-SA-twt" id="03f-uQ-x9w"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Item" id="jVJ-uQ-yR6"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Settings" id="MVI-Fm-Kex">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yPL-k2-dd5">
                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <segue destination="3iB-HS-PDJ" kind="popoverPresentation" popoverAnchorBarButtonItem="yPL-k2-dd5" id="CUn-Hr-Dwt">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
...
