...
        data.append(Transaction(title: "Hiking trip fees", baseCost: "$947.04", countryCost: "$1,201.00", exchangeRate: "0.79", date: "29/10/2017", time: "12:10 PM", latitude: "", longitude: "", locationName: "Dandenong Ranges, Australia",country: "Australia"))
        
        data.append(Transaction(title: "Sunglasses for Rayan", baseCost: "$101.61", countryCost: "$129.00", exchangeRate: "0.79", date: "29/10/2017", time: "11:19 PM", latitude: "", longitude: "", locationName: "Preston, Melbourne, Australia",country: "Australia"))
        
        data.append(Transaction(title: "Water bottle", baseCost: "$1.57", countryCost: "$1.99", exchangeRate: "0.79", date: "27/10/2017", time: "01:55 PM", latitude: "", longitude: "", locationName: "Melbourne CBD, Australia",country: "Australia"))
        
        data.append(Transaction(title: "Chips Snacks", baseCost: "$1.67", countryCost: "$2.12", exchangeRate: "0.79", date: "25/10/2017", time: "05:45 PM", latitude: "", longitude: "", locationName: "Melbourne CBD, Australia",country: "Australia"))
        
        data.append(Transaction(title: "Launch - Pasta", baseCost: "$16.46", countryCost: "$20.90", exchangeRate: "0.79", date: "25/10/2017", time: "03:20 PM", latitude: "", longitude: "", locationName: "Melbourne CBD, Australia",country: "Australia"))
        
        return data
    }

...
